--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ numpy==1.22.2
 tensorflow==2.8.0
 gunicorn==20.0.4
 Werkzeug==0.16.0
-Jinja2==2.10.1
+Jinja2==2.10.3
+itsdangerous==1.1.0
 MarkupSafe==1.1.1
