--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==1.0.0
 astunparse==1.6.3
 cachetools==5.0.0
 certifi==2021.10.8
+chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.0.4
 colorama==0.4.4
@@ -31,6 +32,7 @@ numpy==1.22.2
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.4.2
 Pillow==9.0.1
 pipreqs==0.4.11
 protobuf==3.19.4
